finished the splash section and header

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -2,6 +2,10 @@
 // Colors
 // =============================================
 
+$gray: #dedee6;
+$purple--dark: #17102b;
+$purple--light: #c0aee8;
+
 // =============================================
 // Typography
 // =============================================
