--- a/src/scss/core/_common.scss
+++ b/src/scss/core/_common.scss
@@ -11,9 +11,9 @@ html, body {
   * ============================================ */
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: futura-pt, sans-serif;
   font-size: 16px;
-  background: #fff;
+  background: $gray;
 }
 
 h1, .title-1 { @include title-1; }
