--- a/src/scss/mixin/_typography.scss
+++ b/src/scss/mixin/_typography.scss
@@ -4,19 +4,19 @@
 
 @mixin title-1 {
   margin: 0;
-  margin-bottom: 0.7em;
-  font-size: 4em;
-  font-weight: 200;
-  line-height: 1.2em;
+  line-height: 0.3em;
+  font-family: din-condensed, sans-serif;
+  font-size: 95px;
+  letter-spacing: -1px;
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
 }
 
 @mixin title-2 {
   margin: 0;
-  margin-bottom: 0.7em;
-  font-size: 3em;
-  font-weight: 200;
+  font-family: din-condensed, sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
   text-rendering: optimizeLegibility;
 }
 
