--- a/src/scss/mixin/_typography.scss
+++ b/src/scss/mixin/_typography.scss
@@ -22,26 +22,29 @@
 
 @mixin title-3 {
   margin: 0;
-  margin-bottom: 0.7em;
-  font-size: 2.5em;
-  line-height: 1.2em;
+  margin-bottom: 80px;
+  font-family: din-condensed, sans-serif;
+  font-size: 70px;
+  text-transform: uppercase;
   text-rendering: optimizeLegibility;
 }
 
 @mixin title-4 {
   margin: 0;
-  margin-bottom: 0.7em;
-  font-size: 1.5em;
-  font-weight: 200;
-  line-height: 1.2em;
+  margin-bottom: 30px;
+  font-family: din-condensed, sans-serif;
+  font-size: 45px;
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
 }
 
 @mixin title-5 {
   margin: 0;
-  font-size: 1.4em;
-  font-weight: 200;
-  line-height: 1.75em;
+  margin-bottom: 35px;
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.5px;
+  line-height: 24px;
   text-rendering: optimizeLegibility;
 }
