finalizing responsive versions and safari line-height bug fix

--- a/src/scss/mixin/_typography.scss
+++ b/src/scss/mixin/_typography.scss
@@ -4,7 +4,7 @@
 
 @mixin title-1 {
   margin: 0;
-  line-height: 0.3em;
+  line-height: 34px;
   font-family: din-condensed, sans-serif;
   font-size: 95px;
   letter-spacing: -1px;
