--- a/src/scss/_core.scss
+++ b/src/scss/_core.scss
@@ -12,4 +12,5 @@
 // ----------------------------------------------
 // Layout
 
-@import "layout/main"; 
+@import "layout/main";
+@import "layout/responsive";
