--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -183,7 +183,7 @@
 }
 
 .footer {
-  padding: 60px 0 200px;
+  padding: 60px 0 70px;
   background: $purple--light;
   letter-spacing: -0.5px;
   &__address__title {
@@ -232,6 +232,18 @@
   .row {
       display: flex;
       justify-content: space-between;
+  }
+  &__credit {
+    padding: 200px 0 0;
+    font-family: din-condensed, sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    color: $gray;
+    &__url {
+      color: $purple--dark;
+    }
   }
 }
 
@@ -408,6 +420,18 @@
   &:hover {
     background: $purple--dark;
     color: $gray;
+  }
+}
+
+.footer {
+  .cta {
+    margin-left: 7px;
+    background: $gray;
+    color: $purple--dark;
+    &:hover {
+      background: $purple--dark;
+      color: $gray;
+    }
   }
 }
 
