--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -91,6 +91,9 @@
   .illustration--hide-on-mobile {
     display: none;
   }
+  .footer__credit {
+    padding: 100px 0 0;
+  }
 }
 
 @media only screen and (max-width: 900px) and (max-height: 900px) {
